# blog_os

./: .gitignore  Cargo.toml  LICENSE  README.md  blogos_runner  build.rs  run_kernel_tests.sh  rust-toolchain.toml  x86_64-unknown-none.json
.cargo/: config.toml
.github/workflows/: rust.yml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  console.rs  cpu.rs  gdt.rs  graphics.rs  interrupts.rs  lib.rs  limine_vga.rs  main.rs  memory.rs  panicking.rs  serial.rs  test.rs
kernel/tests/: heap_allocation.rs  stack_overflow.rs  test.rs
limine/: limine.conf
src/: limine_vga.rs  main.rs  qemu_virtual_machine.rs  vga_buffer.rs
