[package]
name = "os"         # or any other name
version = "0.1.0"
edition = "2024"

[build-dependencies]
bootloader = { path = "../bootloader/" }
test-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
byteorder = { version = "1.5", default-features = false }

[dependencies]
#ovmf-prebuilt = "0.1.0-alpha.1"
ovmf-prebuilt = "0.2.3"

[workspace]
members = ["kernel"]
