[package]
name = "libkernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11"
qemu-exit = "3.0.2"
spin = "0.10.0"
volatile = "0.2.6"
x86_64 = "0.15.2"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[lib]
name = "libkernel"
path = "src/lib.rs"
test = true

[features]
with-tests = []
