[package]
name = "rustyk"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11.12"
embedded-graphics = "0.8.1"
linked_list_allocator = "0.10.5"
nostd = "0.1.5"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
qemu-exit = "3.0.2"
spin = "0.10.0"
uefi = "0.35.0"
vga = "0.2.9"
volatile = "0.2.6"
x86_64 = "0.15.2"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]


[[bin]]
name = "test_heap_allocation"

[[bin]]
name = "test_stack_overflow"


[features]
with-tests = []


[profile.release]
panic = "abort"
